# idealist

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg  setup.py
idea_generator/: __init__.py  generator.py
tests/: test_generator.py
