# setup.cfg

[metadata]
name = idea-generator  # Replace with your desired package name
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A flexible idea generator using LLMs and embeddings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/idea-generator  # Replace with your repo URL
project_urls =
    Bug Tracker = https://github.com/yourusername/idea-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    litellm
    pydantic
    scikit-learn
