[metadata]
name = infinite_idealist
version = 0.1.2
author = Yohei Nakajima
author_email = yohei@example.com
description = A flexible idea generator using LLMs and embeddings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yoheinakajima/infinite-idealist
project_urls =
    Bug Tracker = https://github.com/yoheinakajima/infinite-idealist/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    litellm
    pydantic
    scikit-learn
